# todo-test-dev

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHALLENGES.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  conftest.py  logger_setup.py  pyproject.toml  pytest.ini  requirements.txt
backend/apps/tasks/: admin.py  models.py  serializers.py  tasks.py  views.py
backend/apps/tasks/migrations/: 0001_initial.py  0002_initial.py
backend/apps/tasks/tests/: test_api.py  test_model.py
backend/apps/users/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/tests/: test_auth.py
backend/config/: celery.py  settings.py  urls.py
bot/: .env.example  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
bot/handlers/: categories.py  create_task.py  start.py  tasks.py
bot/middlewares/: auth.py
bot/services/: api_client.py  token_storage.py
scripts/: init-db.sh
